<resources>
    <string name="app_name">Referee Trainer</string>
    <string name="increase">+</string>
    <string name="decrease">-</string>
    <string name="next">weiter</string>
    <string name="previous">zurück</string>
    <string name="check">prüfen</string>
    <string name="enum_spotoffoul">Spot of Foul</string>
    <string name="enum_previousspot">Previous Spot</string>
    <string name="enum_succeedingspot">Succeeding Spot</string>
    <string name="enum_basicspot">Basic Spot</string>
    <string name="R">Referee</string>
    <string name="CJ">Centerjudge</string>
    <string name="U">Umpire</string>
    <string name="LM">Linesman</string>
    <string name="LJ">Linejudge</string>
    <string name="SJ">Sidejudge</string>
    <string name="FJ">Fieldjudge</string>
    <string name="BJ">Backjudge</string>
    <string name="OTHER">Anderes</string>
    <string name="start_header">Willkommen zur Referee Trainer App</string>
    <string name="start_button1">Fouls und Strafen</string>
    <string name="start_button2">Schiedsrichtersignale</string>
    <string name="start_button3">Kettencrew Einweisungshilfe</string>
    <string name="start_button_calculator">Fahrtkostenrechner</string>
    <string name="start_button_penalties">QUIZ Strafdurchführung</string>
    <string name="start_button_signals">QUIZ Schiedsrichterzeichen</string>
    <string name="KetteEin">Hier sind kurz und knapp alle Punkte aufgelistet, die du bei der Einweisung der Kettencrew ansprechen solltest:</string>
    <string name="Kette1">
        Die Stangen sind nicht zur Selbstverteidigung gedacht und so ausgelegt, zur Not fallen gelassen zu werden.\n\nAufmerksam sein. Deswegen Handys und sonstige Geräte
        ausschalten.\n\nZügig arbeiten, sodass das Spieltempo eingehalten werden
        kann.\n\nDer gegnerischen Teamzone entsprechend angemessen benehmen.\n\nNur wenn aufgefordert die Positionen ändern. Insbesondere wenn Flaggen auf dem Feld liegen.\n\nBei
        Free Kicks soll sich die Kettencrew auf höhe der 25 Meter Linie aufhalten.\n\nBei einem First Down innerhalb von Team B\'s 10 wird die Kette hingelegt.\n\nBei
        PAT Fieldgoal versuchen, soll einer der beiden Kettenträger den Ball fangen und zu uns bringen.\n\nBei Problemen mit der Seitenlinie oder Teamzone nicht zögern den Schiedsrichter
        anzusprechen.
    </string>
    <string name="Kette2">
        Weitere Tipps:\n\nAchte drauf ob im vorhinein schon Merkmale auffallen, die Einzelne nicht geeignet zur Arbeit an der Kette machen. Zum Beispiel sollte der Downmarker groß
        genug sein um die Downanzeige problemlos ändern zu können oder Schuhe mit hohen Absätzen eignen sich nicht um zügig die Kette das Feld hoch und runter zu bewegen.\n\nBei einer
        unerfahrenen Kettencrew solltest du dir die Zeit nehmen und ein paar Probe Downs durchgehen, damit Sie schon ein Gefühl dafür kriegen.\n\nVersuche Dir den Namen des
        Downmarkers zu merken, da du ihn am häufigsten bewegen musst.\n\nBiete insbesondere an warmen Tagen regelmäßig deiner Crew an, ihnen etwas zu trinken vom Gastteam zu
        organisieren.\n\nLass Dir am Ende des Spieles deinen Kettenclip in die Hand drücken.
    </string>
    <string name="calculator_txt_header_league">Liga und Crew-Stärke</string>
    <string name="calculator_txt_selectleague">Liga</string>
    <string-array name="calculator_arr_leagues">
        <item>GFL</item>
        <item>GFL-2 und DBL</item>
        <item>andere Seniorenligen, DBL-2, DFFL und GFL-J </item>
        <item>11er-Tackle Jugendligen (NRW)</item>
        <item>9er-Tackle Jugendligen (NRW)</item>
        <item>5er-Tackle Jugendligen und Damen (4er-Turnier)(NRW)</item>
        <item>5er-Tackle Jugendligen und Damen (3er-Turnier)(NRW)</item>
    </string-array>
    <string name="calculator_txt_numofrefs">Anzahl Schiedsrichter</string>
    <string name="calculator_txt_sum">Zahlung</string>
    <string name="calculator_txt_regionalCrew">Regio-Crew</string>
    <string name="calculator_txt_payinfo1">
        Referee: \t\t100€ \n
        restliche Positionen: \t80€ \n
        Pro gefahrenen Kilometer: 0,30€ (keine Erstattung unter 20km einfache Entfernung) \n
        bei zusätzlicher Abwesenheit von mehr als 12 Stunden: 30€ \n
    </string>
    <string name="calculator_txt_payinfo2">
        Pro Schiedsrichter: 50€ \n
        Fahrtgeld: 120€ bei mehr als 4 Schiedsrichtern; ansonsten 60€ \n
    </string>
    <string name="calculator_txt_payinfo3">
        Pro Schiedsrichter: 40€ \n
        Fahrtgeld: 120€ bei mehr als 4 Schiedsrichtern; ansonsten 60€ \n
    </string>
    <string name="calculator_txt_payinfo4">280€ Pauschale \n</string>
    <string name="calculator_txt_payinfo5">240€ Pauschale \n</string>
    <string name="calculator_txt_payinfo6">280€ Pauschale \n</string>
    <string name="calculator_txt_payinfo7">180€ Pauschale \n</string>
    <string name="calculator_txt_header_distance">Fahrtstrecken</string>
    <string-array name="refposititons">
        <item>Referee</item>
        <item>Centerjudge</item>
        <item>Umpire</item>
        <item>Linesman</item>
        <item>Linejudge</item>
        <item>Backjudge</item>
        <item>Sidejudge</item>
        <item>Fieldjudge</item>
    </string-array>
    <string name="calculator_txt_lastchanges">Anpassungen</string>
    <string name="calculator_txt_eachonegets">Jeder Schiedsrichter erhält</string>
    <string name="calculator_txt_remainder">Restbetrag</string>
    <string name="calculator_txt_add5">zzgl. 5€</string>
    <string name="calculator_txt_result">Geldaufteilung</string>
    <string name="penalties_yards">Meterstrafe</string>
    <string name="penalties_enforcementspot">Enforcement-Spot</string>
    <string name="penalties_automaticfirst">Automatischer erster Versuch</string>
    <string name="penalties_lossofdown">Down-Verlust</string>
    <string name="penalties_0yards">0</string>
    <string name="penalties_5yards">5</string>
    <string name="penalties_10yards">10</string>
    <string name="penalties_15yards">15</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.

Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.

Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.

Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.

Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis.

At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, At accusam aliquyam diam dolore dolores duo eirmod eos erat, et nonumy sed tempor et invidunt justo labore Stet clita ea et gubergren, kasd magna no rebum. sanctus sea sed takimata ut vero voluptua. est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur</string>
</resources>