<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/activity_horizontal_margin"
    android:paddingVertical="@dimen/activity_vertical_margin" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/penalties_penalty_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/header_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/penalties_yards" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/penalties_penalty_rb_yards0"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/penalties_0yards" />

                        <RadioButton
                            android:id="@+id/penalties_penalty_rb_yards5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/penalties_5yards" />

                        <RadioButton
                            android:id="@+id/penalties_penalty_rb_yards10"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/penalties_10yards" />

                        <RadioButton
                            android:id="@+id/penalties_penalty_rb_yards15"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/penalties_15yards" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/penalties_enforcementspot" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/penalties_penalty_rb_enforcementSpotBasic"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/enum_basicspot" />

                        <RadioButton
                            android:id="@+id/penalties_penalty_rb_enforcementSpotPrevious"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/enum_previousspot" />

                        <RadioButton
                            android:id="@+id/penalties_penalty_rb_enforcementSpotFoul"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/enum_spotoffoul"/>

                        <RadioButton
                            android:id="@+id/penalties_penalty_rb_enforcementSpotSucceeding"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/enum_succeedingspot"/>

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/penalties_automaticfirst" />

                <CheckBox
                    android:id="@+id/penalties_penalty_cb_autoFirst"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/penalties_penalty_tv_autoFirst"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/penalties_lossofdown" />

                <CheckBox
                    android:id="@+id/penalties_penalty_cb_lossOfDown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/penalties_penalty_tv_lossOfDown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/penalties_penalty_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/check"
                    android:onClick="nextButtonPressed" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>